objects/LAT_BI_Cust_Security__c.object
<CustomObject>
    <description>Custom Object used by PowerBI to report over ContractDB</description>
    <fields>
        <fullName>LAT_BI_CD_COUNTR_CUSTOMER__c</fullName>
        <label>LAT BI CD COUNTR CUSTOMER</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_CUSTOMER__c</fullName>
        <label>LAT BI CD CUSTOMER</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_LOGIN__c</fullName>
        <label>LAT BI LOGIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>LAT BI Cust Security</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_CD_COUNTR_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CUSTOMER__c</columns>
        <columns>LAT_BI_LOGIN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>LAT_BI_Security_IT</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_LOGIN__c</columns>
        <columns>LAT_BI_CD_COUNTR_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CUSTOMER__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_BI_CD_CUSTOMER__c</field>
            <operation>equals</operation>
            <value>102420</value>
        </filters>
        <label>LAT BI Security IT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SEC-{000000}</displayFormat>
        <label>LAT BI Cust Security Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT BI Cust Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>